[gd_scene load_steps=8 format=3 uid="uid://dtnfkcdr0tyo8"]

[ext_resource type="Script" uid="uid://cjhkwvevw6y1i" path="res://Scripts/dungeon.gd" id="1_dakn4"]
[ext_resource type="PackedScene" uid="uid://bfibegpwntqgy" path="res://Scenes/card_slot.tscn" id="1_oavya"]
[ext_resource type="Texture2D" uid="uid://dw4ketb5p1pjx" path="res://Assets/cardSlot.png" id="2_iqbxe"]
[ext_resource type="Texture2D" uid="uid://b1q10src1qaul" path="res://Assets/cardBack.png" id="3_l3tba"]
[ext_resource type="Texture2D" uid="uid://cle7olvpwhey1" path="res://Assets/lifepoints.png" id="4_iqbxe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lt7kh"]
size = Vector2(68, 96)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5v1xs"]
radius = 29.0
height = 66.0

[node name="Dungeon" type="Node2D"]
script = ExtResource("1_dakn4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 324)
zoom = Vector2(2, 2)

[node name="lastMonster" type="Sprite2D" parent="."]
position = Vector2(383, 409)
texture = ExtResource("2_iqbxe")

[node name="graveyard" type="Sprite2D" parent="."]
position = Vector2(687, 409)
texture = ExtResource("2_iqbxe")

[node name="WeaponSlot" parent="." instance=ExtResource("1_oavya")]
position = Vector2(468, 409)

[node name="weaponArea" type="Area2D" parent="WeaponSlot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponSlot/weaponArea"]
shape = SubResource("RectangleShape2D_lt7kh")

[node name="deck" type="Sprite2D" parent="."]
position = Vector2(357, 236)
texture = ExtResource("3_l3tba")

[node name="DeckSize" type="Label" parent="deck"]
offset_left = -20.0
offset_top = 22.0
offset_right = 20.0
offset_bottom = 45.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lifepoints" type="Sprite2D" parent="."]
position = Vector2(580, 425)
texture = ExtResource("4_iqbxe")

[node name="lifepointd" type="Area2D" parent="Lifepoints"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lifepoints/lifepointd"]
position = Vector2(0, 3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5v1xs")

[node name="lifeDisplay" type="Label" parent="Lifepoints"]
offset_left = -19.0
offset_top = -8.0
offset_right = 21.0
offset_bottom = 15.0
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="roomBox" type="ColorRect" parent="."]
offset_left = 440.0
offset_top = 188.0
offset_right = 740.0
offset_bottom = 288.0
color = Color(1, 1, 1, 0.09411765)

[node name="room" type="HBoxContainer" parent="roomBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RunButton" type="Button" parent="."]
offset_left = 322.0
offset_top = 289.0
offset_right = 392.0
offset_bottom = 320.0
text = "Run"

[connection signal="mouse_entered" from="WeaponSlot/weaponArea" to="." method="_on_weapon_area_mouse_entered"]
[connection signal="mouse_exited" from="WeaponSlot/weaponArea" to="." method="_on_weapon_area_mouse_exited"]
[connection signal="mouse_entered" from="Lifepoints/lifepointd" to="." method="_on_lifepointd_mouse_entered"]
[connection signal="mouse_exited" from="Lifepoints/lifepointd" to="." method="_on_lifepointd_mouse_exited"]
[connection signal="pressed" from="RunButton" to="." method="_on_run_button_pressed"]
